--- a/internal/suites/LDAP/configuration.yml
+++ b/internal/suites/LDAP/configuration.yml
@@ -43,6 +43,11 @@ session:
 authentication_backend:
   ldap:
     address: 'ldaps://openldap'
+    pooling:
+      enable: true
+      count: 4
+      retries: 3
+      timeout: 10s
     tls:
       skip_verify: true
     base_dn: 'dc=example,dc=com'
