feat: add api endpoint and table for user managment
This commit includes a new `/api/admin/users/info` endpoint which returns all users and their attributes from the users_attributes table. The attributes are generated when certain events happen. (Logging in, changing password, resetting password, a forced logout, or password change) This endpoint is configurable via the new administration configuration options that will potentially expand to encompass other aspects of a management interface.
Currently any user with the specified `admin_group` group will have access to user management in their regular user settings. This is a hold over until the work can be done on separating the management interface from the main authelia interface.

--- a/internal/suites/Standalone/configuration.yml
+++ b/internal/suites/Standalone/configuration.yml
@@ -23,6 +23,11 @@ authentication_backend:
   file:
     path: /config/users.yml
 
+administration:
+  enabled: true
+  admin_group: "authelia-admin"
+  enable_user_management: true
+
 session:
   expiration: 3600
   inactivity: 300
