--- a/internal/suites/LDAP/configuration.yml
+++ b/internal/suites/LDAP/configuration.yml
@@ -14,6 +14,11 @@ server:
 log:
   level: debug
 
+administration:
+  enabled: true
+  admin_group: "authelia-admin"
+  enable_user_management: true
+
 authentication_backend:
   ldap:
     address: 'ldaps://openldap'
