feat(storage): allow postgres failover
This allows configuring failover PostgreSQL servers.

Signed-off-by: James Elliott <james-d-elliott@users.noreply.github.com>

--- a/docs/static/schemas/v4.39/json-schema/configuration.json
+++ b/docs/static/schemas/v4.39/json-schema/configuration.json
@@ -2994,7 +2994,7 @@
         "address": {
           "$ref": "#/$defs/AddressTCP",
           "title": "Address",
-          "description": "The address of the database."
+          "description": "The address of the SQL Server."
         },
         "database": {
           "type": "string",
@@ -3038,7 +3038,7 @@
         "address": {
           "$ref": "#/$defs/AddressTCP",
           "title": "Address",
-          "description": "The address of the database."
+          "description": "The address of the SQL Server."
         },
         "database": {
           "type": "string",
@@ -3069,14 +3069,22 @@
           "title": "Timeout",
           "description": "The timeout for the database connection."
         },
+        "tls": {
+          "$ref": "#/$defs/TLS"
+        },
         "schema": {
           "type": "string",
           "title": "Schema",
           "description": "The default schema name to use.",
           "default": "public"
         },
-        "tls": {
-          "$ref": "#/$defs/TLS"
+        "servers": {
+          "items": {
+            "$ref": "#/$defs/StoragePostgreSQLServer"
+          },
+          "type": "array",
+          "title": "Servers",
+          "description": "The fallback PostgreSQL severs to connect to in addition to the one defined by the address."
         },
         "ssl": {
           "$ref": "#/$defs/StoragePostgreSQLSSL",
@@ -3125,6 +3133,20 @@
       "additionalProperties": false,
       "type": "object",
       "description": "StoragePostgreSQLSSL represents the SSL configuration of a PostgreSQL database."
+    },
+    "StoragePostgreSQLServer": {
+      "properties": {
+        "address": {
+          "$ref": "#/$defs/AddressTCP",
+          "title": "Address",
+          "description": "The address of the PostgreSQL Server."
+        },
+        "tls": {
+          "$ref": "#/$defs/TLS"
+        }
+      },
+      "additionalProperties": false,
+      "type": "object"
     },
     "TLS": {
       "properties": {
