--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "@mui/icons-material": "6.1.1",
     "@mui/material": "6.1.1",
     "@mui/styles": "6.1.1",
+    "@mui/x-data-grid": "^7.17.0",
     "@simplewebauthn/browser": "10.0.0",
     "@simplewebauthn/types": "10.0.0",
     "axios": "1.7.7",
