--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,38 +5,36 @@ FROM node:22-alpine@sha256:c9bb43423a6229aeddf3d16ae6aaa0ff71a0b2951ce18ec8fedb6
 
 WORKDIR /node/src/app
 
-COPY web ./
+COPY --link web ./
 
 # Install the dependencies and build
-RUN yarn global add pnpm && \
-    pnpm install --frozen-lockfile && pnpm coverage
+RUN \
+	yarn global add pnpm && \
+	pnpm install --frozen-lockfile && \
+	pnpm coverage
 
 # =======================================
 # ===== Build image for the backend =====
 # =======================================
-FROM golang:1.23.2-alpine@sha256:9dd2625a1ff2859b8d8b01d8f7822c0f528942fe56cfe7a1e7c38d3b8d72d679 AS builder-backend
+FROM golang:1.23.2-bookworm@sha256:18d2f940cc20497f85466fdbe6c3d7a52ed2db1d5a1a49a4508ffeee2dff1463 AS builder-backend
 
 WORKDIR /go/src/app
 
-RUN \
-	echo ">> Downloading required apk's..." && \
-	apk --no-cache add gcc musl-dev
-
-COPY go.mod go.sum ./
+COPY --link go.mod go.sum ./
 
 RUN \
 	echo ">> Downloading go modules..." && \
 	go mod download
 
-COPY / ./
+COPY --link / ./
 
 # Prepare static files to be embedded in Go binary
-COPY --from=builder-frontend /node/src/internal/server/public_html internal/server/public_html
+COPY --link --from=builder-frontend /node/src/internal/server/public_html internal/server/public_html
 
 ARG LDFLAGS_EXTRA
+
 RUN \
 	mv api internal/server/public_html/api && \
-	chmod 0666 /go/src/app/.healthcheck.env && \
 	echo ">> Starting go build..." && \
 	CGO_ENABLED=1 CGO_CPPFLAGS="-D_FORTIFY_SOURCE=2 -fstack-protector-strong" CGO_LDFLAGS="-Wl,-z,relro,-z,now" go build \
 	-ldflags "-linkmode=external -s -w ${LDFLAGS_EXTRA}" -trimpath -buildmode=pie -o authelia ./cmd/authelia
@@ -44,23 +42,19 @@ RUN \
 # ===================================
 # ===== Authelia official image =====
 # ===================================
-FROM alpine:3.20.3@sha256:beefdbd8a1da6d2915566fde36db9db0b524eb737fc57cd1367effd16dc0d06d
+FROM authelia/base:latest
 
 WORKDIR /app
 
-# Set environment variables
-ENV PATH="/app:${PATH}" \
-    PUID=0 \
-    PGID=0 \
-    X_AUTHELIA_CONFIG="/config/configuration.yml"
+ENV \
+	PATH="/app:${PATH}" \
+	PUID=0 \
+	PGID=0 \
+	X_AUTHELIA_CONFIG="/config/configuration.yml"
 
-RUN \
-	apk --no-cache add ca-certificates su-exec tzdata wget
+COPY --link --from=builder-backend /go/src/app/authelia /go/src/app/LICENSE /go/src/app/entrypoint.sh /go/src/app/healthcheck.sh ./
 
-COPY --from=builder-backend /go/src/app/authelia /go/src/app/LICENSE /go/src/app/entrypoint.sh /go/src/app/healthcheck.sh /go/src/app/.healthcheck.env ./
-
-RUN \
-	chmod 0666 /app/.healthcheck.env
+COPY --link	--from=builder-backend --chmod=666 /go/src/app/.healthcheck.env ./
 
 EXPOSE 9091
 
