--- a/internal/suites/CLI/docker-compose.yml
+++ b/internal/suites/CLI/docker-compose.yml
@@ -5,8 +5,9 @@ services:
       - './CLI/configuration.yml:/config/configuration.yml'
       - './CLI/storage.yml:/config/configuration.storage.yml'
       - './CLI/users.yml:/config/users.yml'
+      - './CLI/exports:/exports'
       - './common/pki:/pki'
       - './common/pki/public.crt:/certs/public.crt'
       - '/tmp:/tmp'
-    user: ${USER_ID}:${GROUP_ID}
+    user: '${USER_ID}:${GROUP_ID}'
 ...
